--- a/Components/Account/Pages/Manage/Email.razor
+++ b/Components/Account/Pages/Manage/Email.razor
@@ -14,11 +14,11 @@
 
 <PageTitle>Manage email</PageTitle>
 
-<h3>Manage email</h3>
+<h3 class="mb-4">Manage email</h3>
 
 <StatusMessage Message="@message" />
 <div class="row">
-    <div class="col-xl-6">
+    <div class="col-xl-4">
         <form @onsubmit="OnSendEmailVerificationAsync" @formname="send-verification" id="send-verification-form"
             method="post">
             <AntiforgeryToken />
@@ -48,12 +48,11 @@
                 </div>
             }
             <div class="form-floating mb-3">
-                <InputText @bind-Value="Input.NewEmail" id="Input.NewEmail" class="form-control" autocomplete="email"
-                    aria-required="true" placeholder="Enter a new email" />
-                <label for="Input.NewEmail" class="form-label">New email</label>
-                <ValidationMessage For="() => Input.NewEmail" class="text-danger" />
+                <SfTextBox Placeholder="New Email" CssClass="e-outline"
+                    FloatLabelType="FloatLabelType.Always" @bind-Value="Input.NewEmail" id="Input.NewEmail" />
+                <ValidationMessage For="() => Input.NewEmail" class="text-danger small" />
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Change email</button>
+            <SfButton Type="submit" CssClass="e-primary w-100">Change Email</SfButton>
         </EditForm>
     </div>
 </div>
