--- a/Components/Account/Pages/Manage/TwoFactorAuthentication.razor
+++ b/Components/Account/Pages/Manage/TwoFactorAuthentication.razor
@@ -19,23 +19,23 @@
     {
         if (recoveryCodesLeft == 0)
         {
-            <div class="alert alert-danger">
+            <div class="alert alert-danger mt-3">
                 <strong>You have no recovery codes left.</strong>
-                <p>You must <a href="Account/Manage/GenerateRecoveryCodes">generate a new set of recovery codes</a> before you can log in with a recovery code.</p>
+                <p>You must <a href="Account/Manage/GenerateRecoveryCodes" class="text-danger">generate a new set of recovery codes</a> before you can log in with a recovery code.</p>
             </div>
         }
         else if (recoveryCodesLeft == 1)
         {
-            <div class="alert alert-danger">
+            <div class="alert alert-danger mt-3">
                 <strong>You have 1 recovery code left.</strong>
-                <p>You can <a href="Account/Manage/GenerateRecoveryCodes">generate a new set of recovery codes</a>.</p>
+                <p>You can <a href="Account/Manage/GenerateRecoveryCodes" class="text-danger">generate a new set of recovery codes</a>.</p>
             </div>
         }
         else if (recoveryCodesLeft <= 3)
         {
-            <div class="alert alert-warning">
+            <div class="alert alert-warning mt-3">
                 <strong>You have @recoveryCodesLeft recovery codes left.</strong>
-                <p>You should <a href="Account/Manage/GenerateRecoveryCodes">generate a new set of recovery codes</a>.</p>
+                <p>You should <a href="Account/Manage/GenerateRecoveryCodes" class="text-warning">generate a new set of recovery codes</a>.</p>
             </div>
         }
 
@@ -43,28 +43,28 @@
         {
             <form style="display: inline-block" @formname="forget-browser" @onsubmit="OnSubmitForgetBrowserAsync" method="post">
                 <AntiforgeryToken />
-                <button type="submit" class="btn btn-primary">Forget this browser</button>
+                <button type="submit" class="btn btn-outline-primary">Forget this browser</button>
             </form>
         }
 
-        <a href="Account/Manage/Disable2fa" class="btn btn-primary">Disable 2FA</a>
-        <a href="Account/Manage/GenerateRecoveryCodes" class="btn btn-primary">Reset recovery codes</a>
+        <a href="Account/Manage/Disable2fa" class="btn btn-outline-danger">Disable 2FA</a>
+        <a href="Account/Manage/GenerateRecoveryCodes" class="btn btn-outline-secondary">Reset recovery codes</a>
     }
 
     <h4>Authenticator app</h4>
     @if (!hasAuthenticator)
     {
-        <a href="Account/Manage/EnableAuthenticator" class="btn btn-primary">Add authenticator app</a>
+        <a href="Account/Manage/EnableAuthenticator" class="btn btn-outline-primary">Add authenticator app</a>
     }
     else
     {
-        <a href="Account/Manage/EnableAuthenticator" class="btn btn-primary">Set up authenticator app</a>
-        <a href="Account/Manage/ResetAuthenticator" class="btn btn-primary">Reset authenticator app</a>
+        <a href="Account/Manage/EnableAuthenticator" class="btn btn-outline-primary">Set up authenticator app</a>
+        <a href="Account/Manage/ResetAuthenticator" class="btn btn-outline-secondary">Reset authenticator app</a>
     }
 }
 else
 {
-    <div class="alert alert-danger">
+    <div class="alert alert-danger mt-3">
         <strong>Privacy and cookie policy have not been accepted.</strong>
         <p>You must accept the policy before you can enable two factor authentication.</p>
     </div>
