--- a/Components/Account/Pages/Manage/ChangePassword.razor
+++ b/Components/Account/Pages/Manage/ChangePassword.razor
@@ -12,33 +12,29 @@
 
 <PageTitle>Change password</PageTitle>
 
-<h3>Change password</h3>
+<h4 class="mb-4">Change password</h4>
 <StatusMessage Message="@message" />
 <div class="row">
-    <div class="col-xl-6">
+    <div class="col-xl-4">
         <EditForm Model="Input" FormName="change-password" OnValidSubmit="OnValidSubmitAsync" method="post">
             <DataAnnotationsValidator />
             <ValidationSummary class="text-danger" role="alert" />
             <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.OldPassword" id="Input.OldPassword" class="form-control"
-                    autocomplete="current-password" aria-required="true" placeholder="Enter the old password" />
-                <label for="Input.OldPassword" class="form-label">Old password</label>
-                <ValidationMessage For="() => Input.OldPassword" class="text-danger" />
+                <SfTextBox Placeholder="Old Password" Type="InputType.Password" CssClass="e-outline"
+                    FloatLabelType="FloatLabelType.Always" @bind-Value="Input.OldPassword" id="Input.OldPassword" />
+                <ValidationMessage For="() => Input.OldPassword" class="text-danger small" />
             </div>
             <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.NewPassword" id="Input.NewPassword" class="form-control"
-                    autocomplete="new-password" aria-required="true" placeholder="Enter the new password" />
-                <label for="Input.NewPassword" class="form-label">New password</label>
-                <ValidationMessage For="() => Input.NewPassword" class="text-danger" />
+                <SfTextBox Placeholder="New Password" Type="InputType.Password" CssClass="e-outline"
+                    FloatLabelType="FloatLabelType.Always" @bind-Value="Input.NewPassword" id="Input.NewPassword" />
+                <ValidationMessage For="() => Input.NewPassword" class="text-danger small" />
             </div>
             <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.ConfirmPassword" id="Input.ConfirmPassword"
-                    class="form-control" autocomplete="new-password" aria-required="true"
-                    placeholder="Enter the new password" />
-                <label for="Input.ConfirmPassword" class="form-label">Confirm password</label>
-                <ValidationMessage For="() => Input.ConfirmPassword" class="text-danger" />
+                <SfTextBox Placeholder="Confirm Password" Type="InputType.Password" CssClass="e-outline"
+                    FloatLabelType="FloatLabelType.Always" @bind-Value="Input.ConfirmPassword" id="Input.ConfirmPassword" />
+                <ValidationMessage For="() => Input.ConfirmPassword" class="text-danger small" />
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Update password</button>
+            <SfButton Type="submit" CssClass="e-primary w-100">Change Password</SfButton>
         </EditForm>
     </div>
 </div>
