--- a/Components/Account/Pages/Manage/ExternalLogins.razor
+++ b/Components/Account/Pages/Manage/ExternalLogins.razor
@@ -16,7 +16,7 @@
 @if (currentLogins?.Count > 0)
 {
     <h3>Registered Logins</h3>
-    <table class="table">
+    <table class="table table-striped table-hover">
         <tbody>
             @foreach (var login in currentLogins)
             {
@@ -27,11 +27,7 @@
                         {
                             <form @formname="@($"remove-login-{login.LoginProvider}")" @onsubmit="OnSubmitAsync" method="post">
                                 <AntiforgeryToken />
-                                <div>
-                                    <input type="hidden" name="@nameof(LoginProvider)" value="@login.LoginProvider" />
-                                    <input type="hidden" name="@nameof(ProviderKey)" value="@login.ProviderKey" />
-                                    <button type="submit" class="btn btn-primary" title="Remove this @login.ProviderDisplayName login from your account">Remove</button>
-                                </div>
+                                <button type="submit" class="btn btn-outline-danger btn-sm">Remove</button>
                             </form>
                         }
                         else
@@ -54,7 +50,7 @@
             <p>
                 @foreach (var provider in otherLogins)
                 {
-                    <button type="submit" class="btn btn-primary" name="Provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">
+                    <button type="submit" class="btn btn-outline-primary btn-sm" name="Provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">
                         @provider.DisplayName
                     </button>
                 }
