--- a/Components/Account/Pages/Manage/Index.razor
+++ b/Components/Account/Pages/Manage/Index.razor
@@ -1,21 +1,19 @@
-﻿@page "/Account/Manage"
+﻿@page "/Account/Manage/Index"
 
 @using System.ComponentModel.DataAnnotations
 @using Microsoft.AspNetCore.Identity
 @using FreelanceManager.Data
 
 @inject UserManager<ApplicationUser> UserManager
-@inject SignInManager<ApplicationUser> SignInManager
 @inject IdentityUserAccessor UserAccessor
-@inject IdentityRedirectManager RedirectManager
 
 <PageTitle>Profile</PageTitle>
 
-<h3>Profile</h3>
+<h4 class="mb-4">Profile</h4>
 <StatusMessage />
 
 <div class="row">
-    <div class="col-xl-6">
+    <div class="col-xl-4">
         <EditForm Model="Input" FormName="profile" OnValidSubmit="OnValidSubmitAsync" method="post">
             <DataAnnotationsValidator />
             <ValidationSummary class="text-danger" role="alert" />
@@ -25,12 +23,11 @@
                 <label for="username" class="form-label">Username</label>
             </div>
             <div class="form-floating mb-3">
-                <InputText @bind-Value="Input.PhoneNumber" id="Input.PhoneNumber" class="form-control"
-                    placeholder="Enter your phone number" />
-                <label for="Input.PhoneNumber" class="form-label">Phone number</label>
-                <ValidationMessage For="() => Input.PhoneNumber" class="text-danger" />
+                <SfTextBox Placeholder="Phone Number" CssClass="e-outline"
+                    FloatLabelType="FloatLabelType.Always" @bind-Value="Input.PhoneNumber" id="Input.PhoneNumber" />
+                <ValidationMessage For="() => Input.PhoneNumber" class="text-danger small" />
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Save</button>
+            <SfButton Type="submit" CssClass="e-primary w-100">Save</SfButton>
         </EditForm>
     </div>
 </div>
@@ -62,12 +59,9 @@
             var setPhoneResult = await UserManager.SetPhoneNumberAsync(user, Input.PhoneNumber);
             if (!setPhoneResult.Succeeded)
             {
-                RedirectManager.RedirectToCurrentPageWithStatus("Error: Failed to set phone number.", HttpContext);
+                throw new InvalidOperationException("Failed to update phone number.");
             }
         }
-
-        await SignInManager.RefreshSignInAsync(user);
-        RedirectManager.RedirectToCurrentPageWithStatus("Your profile has been updated", HttpContext);
     }
 
     private sealed class InputModel
