--- a/Components/Account/Pages/Manage/SetPassword.razor
+++ b/Components/Account/Pages/Manage/SetPassword.razor
@@ -11,30 +11,28 @@
 
 <PageTitle>Set password</PageTitle>
 
-<h3>Set your password</h3>
+<h4 class="mb-4">Set your password</h4>
+
 <StatusMessage Message="@message" />
 <p class="text-info">
-    You do not have a local username/password for this site. Add a local
-    account so you can log in without an external login.
+    Add a local account to log in without using an external provider.
 </p>
 <div class="row">
-    <div class="col-xl-6">
+    <div class="col-xl-4">
         <EditForm Model="Input" FormName="set-password" OnValidSubmit="OnValidSubmitAsync" method="post">
             <DataAnnotationsValidator />
             <ValidationSummary class="text-danger" role="alert" />
             <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.NewPassword" id="Input.NewPassword" class="form-control"
-                    autocomplete="new-password" placeholder="Enter the new password" />
-                <label for="Input.NewPassword" class="form-label">New password</label>
-                <ValidationMessage For="() => Input.NewPassword" class="text-danger" />
+                <SfTextBox Placeholder="New Password" Type="InputType.Password" CssClass="e-outline"
+                    FloatLabelType="FloatLabelType.Always" @bind-Value="Input.NewPassword" id="Input.NewPassword" />
+                <ValidationMessage For="() => Input.NewPassword" class="text-danger small" />
             </div>
             <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.ConfirmPassword" id="Input.ConfirmPassword"
-                    class="form-control" autocomplete="new-password" placeholder="Enter the new password" />
-                <label for="Input.ConfirmPassword" class="form-label">Confirm password</label>
-                <ValidationMessage For="() => Input.ConfirmPassword" class="text-danger" />
+                <SfTextBox Placeholder="Confirm Password" Type="InputType.Password" CssClass="e-outline"
+                    FloatLabelType="FloatLabelType.Always" @bind-Value="Input.ConfirmPassword" id="Input.ConfirmPassword" />
+                <ValidationMessage For="() => Input.ConfirmPassword" class="text-danger small" />
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Set password</button>
+            <SfButton Type="submit" CssClass="e-primary w-100">Set Password</SfButton>
         </EditForm>
     </div>
 </div>
