Projects page view

--- a/Components/App.razor
+++ b/Components/App.razor
@@ -19,8 +19,7 @@
 
 <body>
     <Routes />
-    <script src="_framework/blazor.web.js"></script>
-    <script src="https://cdn.syncfusion.com/blazor/23.1.36/syncfusion-blazor.min.js"></script>
+    @* <script src="_framework/blazor.web.js"></script> *@
 </body>
 
 </html>
