--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -25,7 +25,7 @@
                     </NavLink>
                 </div>
                 <div class="nav-item px-3">
-                    <NavLink class="nav-link fs-14 fb-bold" href="Account/Manage">
+                    <NavLink class="nav-link fs-14 fb-bold" href="Account/Manage/Index">
                         <span class="e-icons e-settings mr-10 fs-16"></span> Settings
                     </NavLink>
                 </div>
