--- a/Components/Layout/MainLayout.razor.css
+++ b/Components/Layout/MainLayout.razor.css
@@ -53,6 +53,7 @@ main {
     }
 
     .sidebar {
+        min-width: 250px;
         width: 250px;
         height: 100vh;
         position: sticky;
