--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -13,3 +13,4 @@
 @using Syncfusion.Blazor.Buttons
 @using Syncfusion.Blazor.Inputs
 @using Syncfusion.Blazor.Notifications
+@using Syncfusion.Blazor.Grids
