--- a/wwwroot/app.css
+++ b/wwwroot/app.css
@@ -60,6 +60,20 @@ h1:focus {
 }
 /* CSS do AÇO */
 
+.scrollTrue {
+    --offset-bottom: auto !important;
+    --overflow: hidden;
+    overflow: auto !important;
+    overflow-y: hidden;
+    flex-wrap: nowrap;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+
+    &::-webkit-scrollbar {
+        display: none;
+    }
+}
+
 .align-self-center {
     align-self: center;
 }
@@ -308,10 +322,18 @@ h1:focus {
 .w-100 {
     width: 100%;
 }
+.w-300px {
+    width: 300px;
+}
 
 .h-100 {
     height: 100%;
 }
+
+.h-180px {
+    height: 180px;
+}
+
 .h100vh {
     height: 100vh;
 }
@@ -342,6 +364,10 @@ h1:focus {
 
 .flex-wrap {
     flex-wrap: wrap;
+}
+
+.flex-nowrap {
+    flex-wrap: nowrap;
 }
 
 .flex-grow-1 {
@@ -444,6 +470,10 @@ h1:focus {
 .color-darkgrey{
     color: #606060;
 }
+.color-success{
+    color: #25AE29;
+}
+
 .bg-color-purple{
     background-color: #5f62b7;
 }
@@ -488,4 +518,12 @@ h1:focus {
     border: 2px solid #6650a4; /* Purple border for selected item */
     color: #6650a4; /* Purple text for selected item */
     border-radius: 3px; /* Reduced border radius for selected item */
+}
+
+.cardStyle{
+    padding: 20px;
+    border-radius: 5px;
+    border: 1px solid #c8c8c8;
+    background-color: white;
+    cursor: pointer;
 }
